# done

./: .SRCINFO  .env  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGES.md  CONTRIBUTING.md  Cargo.toml  Cranky.toml  FLATPAK.md  PKGBUILD  PLUGINS.md  README.md  RELEASE.md  build.rs  dev.edfloreshz.Do.json  dev.edfloreshz.Doable.Devel.json  dev.edfloreshz.Doable.json  dev.edfloreshz.Done.Devel.json  dev.edfloreshz.Done.Plugins.json  dev.edfloreshz.Done.json  dev.edfloreshz.ToDo.json  i18n.toml  meson.build  meson_options.txt  org.devloop.Do.json  rustfmt.toml  shell.nix
core/: Cargo.toml  build.rs  provider.proto
core/examples/grpc/: Cargo.toml  README.md  build.rs  provider.proto
core/examples/usage/: Cargo.toml
core/migrations/2022-05-01-190305_create_tasks/: down.sql  up.sql
core/migrations/2022-07-30-044923_update_lists/: down.sql
core/migrations/2023-05-16-035137_create_lists/: down.sql  up.sql
core/migrations/2023-05-16-035142_create_tasks/: down.sql  up.sql
core/migrations/2024-03-13-133556_update_tasks/: down.sql  up.sql
core/proto/: provider.proto
core/src/: client.rs  enums.rs  lib.rs  provider.rs  schema.rs  service.rs  setup.rs  task_service.rs
core/src/data/: mod.rs
core/src/database/: mod.rs
core/src/models/: list.rs  mod.rs  priority.rs  recurrence.rs  status.rs  task.rs
core/src/plugins/: google.rs  local.rs  microsoft.rs  mod.rs  nextcloud.rs
core/src/services/: local.rs  microsoft.rs  mod.rs  provider.rs  smart.rs
core/src/traits/: list.rs  mod.rs  provider.rs  task.rs
data/: Cargo.toml.in  dev.edfloreshz.Do.desktop  dev.edfloreshz.Do.metainfo.xml  dev.edfloreshz.Doable.appdata.xml.in  dev.edfloreshz.Doable.desktop.in  dev.edfloreshz.Doable.gschema.xml  dev.edfloreshz.Done.appdata.xml.in  dev.edfloreshz.Done.appdata.xml.in.in  dev.edfloreshz.Done.desktop.in  dev.edfloreshz.Done.desktop.in.in  dev.edfloreshz.Done.gschema.xml  dev.edfloreshz.Done.gschema.xml.in  dev.edfloreshz.Done.gschema.xml.in.in  dev.edfloreshz.Done.metainfo.xml  dev.edfloreshz.Done.metainfo.xml.in.in  dev.edfloreshz.ToDo.appdata.xml.in  dev.edfloreshz.ToDo.desktop  dev.edfloreshz.ToDo.gschema.xml  dev.edfloreshz.ToDo.metainfo.xml  meson.build  org.devloop.Do.db  org.devloop.Do.desktop  org.devloop.Do.metainfo.xml
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
service/: .gitignore  Cargo.toml
service/src/: main.rs
src/: actions.rs  app.rs  application.rs  config.rs  const.rs  done.gresource.xml  main.rs  meson.build  options.rs  schema.rs  setup.rs  task.rs  token.rs  window.rs
src/app/: application.rs  config.rs  constants.rs  constants.rs.in  environment.rs  localize.rs  logger.rs  meson.build  mod.rs  notifications.rs  resources.rs  settings.rs  window.rs
src/app/components/: about_dialog.rs  content.rs  delete.rs  list_dialog.rs  list_sidebar.rs  mod.rs  preferences.rs  services.rs  services_sidebar.rs  task_input.rs  task_list_sidebar.rs  welcome.rs
src/app/config/: actions.rs  appearance.rs  gettext.rs  info.rs  localization.rs  meson.build  mod.rs  preferences.rs  resources.rs  settings.rs  setup.rs
src/app/factories/: mod.rs  service.rs  task.rs  task_list.rs
src/app/models/: mod.rs  sidebar_list.rs
src/app/ui/: mod.rs  theme.rs  theme_colors.rs  widget.rs  window.rs
src/application/: actions.rs  appearance.rs  application.rs  config.rs  config.rs.in  constants.rs.in  fluent.rs  gettext.rs  info.rs  localization.rs  localize.rs  meson.build  mod.rs  plugin.rs  resources.rs  services.rs  settings.rs  setup.rs  utilities.rs
src/assets/res/: do.desktop  do.edfloreshz.github.desktop
src/backends/: microsoft.rs
src/core/: mod.rs  provider.rs
src/core/local/: lists.rs  tasks.rs
src/core/models/: mod.rs
src/core/plugins/: mod.rs
src/core/traits/: provider.rs
src/data/: app.rs  config.rs  list.rs  mod.rs  task.rs
src/data/models/: mod.rs
src/data/plugins/: client.rs  mod.rs
src/data/traits/: provider.rs
src/events/: handler.rs  mod.rs
src/factories/: mod.rs
src/factories/details/: factory.rs  messages.rs  model.rs
src/factories/plugin/: factory.rs  messages.rs  model.rs
src/factories/service/: mod.rs
src/factories/task/: factory.rs  mod.rs  model.rs
src/factories/task_entry/: model.rs  widget.rs
src/factories/task_list/: factory.rs  messages.rs  model.rs
src/helpers/: app_helpers.rs  mod.rs
src/list_view/: group.rs  list.rs  mod.rs  panel.rs  sidebar.rs
src/models/: group.rs  list.rs  mod.rs  smart_list.rs  task.rs
src/models/queryable/: list.rs  mod.rs  task.rs
src/old/: app.rs
src/old/factories/: mod.rs
src/old/widgets/: about_dialog.rs
src/plugins/: mod.rs
src/plugins/eds/: mod.rs  provider_eds.rs
src/plugins/local/: mod.rs  provider_local.rs
src/resources/desktop/: com.devloop.do.desktop
src/resources/res/: do.db  do.edfloreshz.github.desktop
src/resources/style/: ui.css
src/services/: microsoft.rs  mod.rs
src/services/local/: lists.rs  mod.rs  tasks.rs
src/services/microsoft/: mod.rs  service.rs  task.rs  token.rs  types.rs
src/storage/: database.rs  mod.rs
src/storage/models/: list.rs
src/tasks_view/: task.rs  tasks.rs
src/themes/: Adwaita.css
src/ui/: base.rs  content.rs  details.rs  list.rs  mod.rs  selection_row.rs  sidebar.rs  style.css
src/views/: mod.rs
src/widgets/: about_dialog.rs  app.rs  content.rs  details.rs  list.rs  list_entry.rs  mod.rs  sidebar.rs  task.rs  task_container.rs  task_list.rs  theme_selector.rs  welcome.rs
src/widgets/component/: content.rs  mod.rs  sidebar.rs
src/widgets/components/: content.rs  mod.rs  new_task.rs  preferences.rs  sidebar.rs  smart_lists.rs  task_entry.rs  welcome.rs
src/widgets/content/: factory.rs  helpers.rs  messages.rs  mod.rs  model.rs  task_container.rs  task_list.rs  widget.rs
src/widgets/contents/: content.rs  details.rs  mod.rs  task_list.rs
src/widgets/custom/: mod.rs
src/widgets/details/: factory.rs  messages.rs  model.rs
src/widgets/factory/: list.rs  list_group.rs  mod.rs  plugin.rs  provider.rs  service.rs  service_row.rs  smart_list.rs  (+3 more)
(+267 files in other folders)
