[package]
name = "done"
version = "0.1.7"
edition = "2021"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
license = "MPL 2.0"
description = "Done is the ultimate task management solution for seamless organization and efficiency. "
homepage = "https://done.edfloreshz.dev/"
documentation = "https://docs.rs/done"
repository = "https://github.com/edfloreshz/done/"
readme = "README.md"

[workspace]
members = ["core"]

[dependencies]
i18n-embed-fl = "0.6.4"
once_cell = "1.13.0"
derive-new = "0.5.9"
anyhow = "1.0.56"
strum = "0.24.1"
strum_macros = "0.24.3"
glib = "0.16.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.relm4-icons]
version = "0.6.0-beta.1"
features = [
    "menu",
    "loupe",
    "floppy",
    "star-filled-rounded",
    "checkmark",
    "check-round-outline-whole",
    "left",
    "warning",
    "flag-outline-thin",
    "flag-outline-thick",
    "flag-filled",
    "work-week",
    "alarm",
    "plus",
    "x-circular",
    "small-x",
    "info",
    "editor",
    "pencil-and-paper",
    "update",
    "clipboard",
    "image-adjust-brightness",
    "file-cabinet",
    "star-outline-rounded",
    "controls",
    "dark-mode",
    "list-large",
    "dock-left",
]

[dependencies.done_local_storage]
path = "core"

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]

[dependencies.relm4]
git = "https://github.com/Relm4/Relm4"
branch = "main"
features = ["macros", "libadwaita", "gnome_44"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.gettext-rs]
version = "0.7"
features = ["gettext-system"]

[dependencies.rust-embed]
version = "6.4.0"
features = ["debug-embed"]

[dependencies.i18n-embed]
version = "0.13.4"
features = ["fluent-system", "desktop-requester"]

[dependencies.libset]
git = "https://github.com/edfloreshz/libset"
branch = "beta"

[build-dependencies]
glib-build-tools = "0.16.3"
