[package]
name = "done"
version = "0.2.0"
edition = "2021"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
license = "MPL 2.0"
description = "Done is the ultimate task management solution for seamless organization and efficiency. "
homepage = "https://done.edfloreshz.dev/"
documentation = "https://docs.rs/done"
repository = "https://github.com/edfloreshz/done/"
readme = "README.md"

[workspace]
members = ["core"]

[dependencies]
i18n-embed-fl = "0.6.7"
once_cell = "1.13.0"
derive-new = "0.5.9"
anyhow = "1.0.56"
strum = "0.25.0"
strum_macros = "0.25.2"
glib = "0.18.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
reqwest = "0.11.18"
futures = "0.3.28"

[dependencies.relm4-icons]
version = "0.7.0-alpha.1"
features = [
    "menu",
    "loupe",
    "floppy",
    "computer",
    "star-filled-rounded",
    "dock-left",
    "task",
    "sonar",
    "check-round-outline2",
    "checkmark",
    "check-round-outline-whole",
    "left",
    "warning",
    "flag-outline-thin",
    "flag-outline-thick",
    "flag-filled",
    "work-week",
    "alarm",
    "plus",
    "x-circular",
    "small-x",
    "info",
    "editor",
    "pencil-and-paper",
    "update",
    "clipboard",
    "image-adjust-brightness",
    "file-cabinet",
    "star-outline-rounded",
    "controls",
    "dark-mode",
    "list-large",
    "dock-left",
]

[dependencies.core_done]
path = "core"

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]

[dependencies.relm4]
version = "0.7.0-alpha.1"
features = ["macros", "libadwaita", "gnome_45"]

[dependencies.libadwaita]
version = "0.5.2"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.gettext-rs]
version = "0.7"
features = ["gettext-system"]

[dependencies.rust-embed]
version = "6.8.1"
features = ["debug-embed"]

[dependencies.i18n-embed]
version = "0.13.4"
features = ["fluent-system", "desktop-requester"]

[dependencies.libset]
git = "https://github.com/edfloreshz/libset"
branch = "beta"

[build-dependencies]
glib-build-tools = "0.18.0"
