[package]
name = "done"
version = "0.2.0"
edition = "2021"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
license = "MPL 2.0"
description = "Done is the ultimate task management solution for seamless organization and efficiency. "
homepage = "https://done.edfloreshz.dev/"
documentation = "https://docs.rs/done"
repository = "https://github.com/edfloreshz/done/"
readme = "README.md"

[workspace]
members = ["core"]

[dependencies]
anyhow = "*"
iced = "*"
iced_core = "*"
iced_aw = { version = "*", features = ["icons"] }
core_done = { path = "core" }
env_logger = "*"
log = "*"
notify-rust = "*"
palette = "*"
derive_setters = "*"
apply = "*"
serde = { version = "*", features = ["derive"] }
chrono = { version = "*", features = ["serde"] }
i18n-embed-fl = "*"
i18n-embed = { version = "*", features = [
    "fluent-system",
    "desktop-requester",
] }
iced_runtime = "0.1.1"

[target.'cfg(windows)'.dependencies]
image = "*"
