[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
done_local_storage = { path = "../core" }
chrono = "0.4.24"
daemonize = "0.5.0"
notify-rust = "4.8.0"
anyhow = "1.0.71"
tokio = "1.28.1"
