[package]
name = "usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "provider-local"
path = "src/local.rs"

[[bin]]
name = "provider-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8.2"
prost = "0.11.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
done_core = { path = "../.." }

[build-dependencies]
tonic-build = "0.8.2"