[package]
name = "microsoft-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
done_core = { path = "../../../"}
serde_json = "1.0.87"
tonic = "0.8.2"
